--- a/pages/tv/welcome.html
+++ b/pages/tv/welcome.html
@@ -122,6 +122,13 @@
                 </div>
             </div>
             <!--背景视频-->
+            <!--展示设置-->
+                <div class="form-group">
+                    <label>展示方式</label>
+                    <select class="form-control" ng-model="tvWelcome.setOption" ng-options="x for x in tvWelcome.selectOptions"></select>
+                </div>
+            <!--展示设置-->
+            
             <!--保存按钮-->
             <div class="form-group">
                 <label> </label>
