--- a/pages/tvAdmin.html
+++ b/pages/tvAdmin.html
@@ -178,6 +178,8 @@
             || my_tree.get_selected_branch().data.type=='SkyworthDTMB'
 
             || my_tree.get_selected_branch().data.type=='BaoFengHDMI'
+            || my_tree.get_selected_branch().data.type=='LocalMovieCommon'
+            || my_tree.get_selected_branch().data.type=='LocalVideoCommon'
 
             || my_tree.get_selected_branch().data.type=='Hospital_Section_PersonalInfo_Nurse'
             || my_tree.get_selected_branch().data.type=='Hospital_Section_PersonalInfo_Expert'
@@ -393,6 +395,8 @@
             || my_tree.get_selected_branch().data.type=='SkyworthDTMB'
 
             || my_tree.get_selected_branch().data.type=='BaoFengHDMI'
+            || my_tree.get_selected_branch().data.type=='LocalMovieCommon'
+            || my_tree.get_selected_branch().data.type=='LocalVideoCommon'
 
             || my_tree.get_selected_branch().data.type=='Hospital_Section_PersonalInfo_Nurse'
             || my_tree.get_selected_branch().data.type=='Hospital_Section_PersonalInfo_Expert'
