--- a/pages/hospitalFood.html
+++ b/pages/hospitalFood.html
@@ -47,8 +47,8 @@
             <td>
                 <div class="form-thumbnail form-thumbnail-sm" style="background-image: url({{pic.PicURL}})"></div>
             </td>
-            <td>{{pic.Title[food.defaultLangCode]}}</td>
-            <td>{{pic.Text[food.defaultLangCode]}}</td>
+            <td style="max-width: 200px">{{pic.Title[food.defaultLangCode]}}</td>
+            <td style="max-width: 491px">{{pic.Text[food.defaultLangCode]}}</td>
             <td>{{pic.Price[food.defaultLangCode]}}{{}}</td>
             <td>
                 <!--编辑按钮-->
