--- a/pages/hospitalPublicArea.html
+++ b/pages/hospitalPublicArea.html
@@ -25,11 +25,11 @@
             <td>
                 <div class="form-thumbnail form-thumbnail-sm" style="background-image: url({{pic.PicURL}})"></div>
             </td>
-            <td>{{pic.Title[pubarea.defaultLangCode]}}</td>
-            <td>{{pic.OpenTime[pubarea.defaultLangCode]}}</td>
-            <td>{{pic.Location[pubarea.defaultLangCode]}}</td>
-            <td>{{pic.Area[pubarea.defaultLangCode]}}</td>
-            <td style="max-width: 491px">{{pic.Introduction[pubarea.defaultLangCode]}}</td>
+            <td style="max-width: 200px">{{pic.Title[pubarea.defaultLangCode]}}</td>
+            <td style="max-width: 100px">{{pic.OpenTime[pubarea.defaultLangCode]}}</td>
+            <td style="max-width: 100px">{{pic.Location[pubarea.defaultLangCode]}}</td>
+            <td style="max-width: 100px">{{pic.Area[pubarea.defaultLangCode]}}</td>
+            <td style="max-width: 391px">{{pic.Introduction[pubarea.defaultLangCode]}}</td>
             <td>
                 <!--编辑按钮-->
                 <a class="" ng-click="pubarea.edit($index)">编辑</a>
