--- a/pages/hospitalScenic.html
+++ b/pages/hospitalScenic.html
@@ -21,7 +21,7 @@
             <td>
                 <div class="form-thumbnail form-thumbnail-sm" style="background-image: url({{pic.PicURL}})"></div>
             </td>
-            <td>{{pic.Title[scenic.defaultLangCode]}}</td>
+            <td style="max-width: 200px">{{pic.Title[scenic.defaultLangCode]}}</td>
             <td>
                 <!--编辑按钮-->
                 <a class="" ng-click="scenic.edit($index)">编辑</a>
