--- a/pages/hospitalEquipment.html
+++ b/pages/hospitalEquipment.html
@@ -22,7 +22,7 @@
             <td>
                 <div class="form-thumbnail form-thumbnail-sm" style="background-image: url({{pic.PicURL}})"></div>
             </td>
-            <td>{{pic.Title[equip.defaultLangCode]}}</td>
+            <td style="max-width: 200px">{{pic.Title[equip.defaultLangCode]}}</td>
             <td style="max-width: 491px">{{pic.Text[equip.defaultLangCode]}}</td>
             <td>
                 <!--编辑按钮-->
