--- a/pages/projectConfig/hotelList.html
+++ b/pages/projectConfig/hotelList.html
@@ -20,7 +20,7 @@
                     <ul class="list-group">
                         <li ng-repeat="sec in pcHotelList.section" class="list-group-item">
                             {{sec.Name[pcHotelList.defaultLangCode]}}
-                            <a ng-click="pcHotelList.showSmallSections(sec.Name[pcHotelList.defaultLangCode],sec.ID)"  class="btn pull-right">分区</a>
+                            <!--<a ng-click="pcHotelList.showSmallSections(sec.Name[pcHotelList.defaultLangCode],sec.ID)"  class="btn pull-right">分区</a>-->
 
                             <br>
                         </li>
