--- a/pages/projectConfig/sections.html
+++ b/pages/projectConfig/sections.html
@@ -3,7 +3,7 @@
     <div ng-show="sectionCtrl.loading">loading...</div>
     <!--loading-->
     <!--添加门店-->
-    <h4>{{sectionCtrl.secName}}——子科室</h4>
+<!--    <h4>{{sectionCtrl.secName}}——子科室</h4>-->
     <!--添加门店-->
     <ul class="list-group">
         <li ng-repeat="section in sectionCtrl.list track by $index" class="list-group-item">
